fixed layout break on small screens

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -11,7 +11,7 @@ body {
 }
 
 .options > .option {
-  @apply bg-zinc-800 p-4 rounded transition-colors w-24 border-2 border-transparent hover:border-brand-300;
+  @apply bg-zinc-800 p-4 rounded transition-colors w-full xs:w-24 border-2 border-transparent hover:border-brand-300;
   @apply flex flex-col items-center flex-1 gap-2;
   @apply focus:border-brand-300 focus:outline-none;
 }
